--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bonezjs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The backbone of React state",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
